This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-12-25:

- The dirname path-bound built-in now accepts multiple operands.

- The basename and dirname path-bound built-ins now have a -z/--zero option
  for compatibility with the GNU versions of these utilities. It causes the
  line terminator to be a zero byte instead of a newline.

- Fixed bugs related to the handling of an initial double slash in the
  basename and dirname path-bound built-ins when used on Windows (Cygwin).

- Fixed a buffer overflow problem in the handling of arithmetic functions.

2024-12-22:

- In the emacs/gmacs line editor, the ESC [ <letter> macro feature, which is
  documented to input the value of the alias __<letter>, now actually works.
  A decades-old bug in internal variable handling rendered it inoperative.

2024-12-21:

- Fixed a bug in the emacs/gmacs line editor where a command repeat count
  (e.g., ESC 3) sticks and is re-used for the next command after an ESC
  command. For example, ESC 3 ESC _ recalls the third word from the last
  command in the history. The bug is that the next command, such as ^B to
  move back, is then repeated three times. Bug introduced on 2020-09-17.

2024-12-18:

- Persuant to POSIX.1-2024, exec(1) will no longer cause the shell to exit
  when it fails to replace an interactive shell with the given command.

2024-12-08:

- POSIX mode: Fixed a bug in the test and [ built-in commands where
  superfluous operands following simple unary or binary expressions were
  ignored instead of throwing an error message. In the 1.0 release series,
  this fix is limited to the POSIX mode due to backward compatibility
  concerns. It will be fixed for native ksh mode in the future 1.1 release.

2024-12-05:

- Fixed an issue in the vi line editors where lines beginning with whitespace