@@ -9513,10 +9513,6 @@ Thus, a trap on
 .B CHLD
 won't be executed until the foreground job terminates.
 .PP
-In locales that use a multibyte character set such as UTF-8, the
-.B KEYBD
-trap is only triggered for ASCII characters (1-127).
-.PP
 It is a good idea to leave a space after the comma operator in
 arithmetic expressions to prevent the comma from being interpreted
 as the decimal point character in certain locales.
