@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-12-30:
+
+- The KEYBD trap should now be fully functional for multibyte characters
+  (for example, non-Latin characters in UTF-8 locales). This fixes a bug
+  inherited from AT&T and worked around on 2022-02-12.
+
 2024-12-25:
 
 - The dirname path-bound built-in now accepts multiple operands.
